# ds-agent-forkcz

./: .gitignore  README.md  accounts.example.txt  config.yaml  logo.py  main.py  proxy.example.txt  pyproject.toml  requirements.txt
agent/: agent.py  llm_wrapper.py  nous.py
config/: config.py
discord/: client.py
modules/: checker.py  runner.py  sender.py
utils/: exceptions.py  helpers.py
