[project]
name = "ds-agent"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-deepseek (>=0.1.3,<0.2.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "dynaconf (>=3.2.11,<4.0.0)",
    "langchain-openai (>=0.3.19,<0.4.0)",
    "fake-useragent (>=2.2.0,<3.0.0)",
    "questionary (>=2.1.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "aiohttp-socks (>=0.10.1,<0.11.0)",
    "httpx[socks] (>=0.28.1,<0.29.0)"
]

[tool.poetry]
package-mode = false